--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 TODO:
 
-1) Figure out issue with float values on arduino.
-2) Fix issue displaying and updating lcd screen using u8g2lib.
+1) Get rid of garbage at the end of the string on the display.
+
+2) Make display look better (make font bigger, etc).
